fix: remove vertical scoll on mobile screen

--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
   /* background-color: yellow; */
 }
 
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   display: flex;
   align-items: center;
@@ -13,13 +19,14 @@ body {
   font-family:
     "Montserrat", "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode",
     "Lucida Sans", Tahoma, sans-serif;
-/* background-color: rgb(234, 224, 225); */
+  /* background-color: rgb(234, 224, 225); */
   /* background: radial-gradient(circle,rgba(245, 245, 245, 1) 0%, rgba(245, 245, 245, 1) 49%, rgba(235, 195, 202, 1) 100%); */
 }
 
-article {
+.app-wrapper {
   margin: 0 auto;
   width: 100vw;
+  height: 100vh;
   padding: 1rem;
 }
 
@@ -123,10 +130,15 @@ li {
 /* Tablet */
 
 @media screen and (min-width: 768px) {
-  body{
-    background: radial-gradient(circle,rgba(197, 202, 244, 1) 0%, rgba(235, 195, 202, 1) 49%, rgba(245, 245, 245, 1) 100%);
+  body {
+    background: radial-gradient(
+      circle,
+      rgba(197, 202, 244, 1) 0%,
+      rgba(235, 195, 202, 1) 49%,
+      rgba(245, 245, 245, 1) 100%
+    );
   }
-  article {
+  .app-wrapper {
     width: 80%;
     padding: 2rem;
     border-radius: 5px;
